# LaughingMan

./: .gitignore  .pylintrc  Cargo.toml  LICENSE  README.md  TODO.md  mask.py  requirements.txt  test_mask.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  linux.yml  pythonapp.yml  rust.yml  windows.yml
src/: laugh.rs
tests/: mask_checker.py
