[package]

name = "laughing-man"
version = "0.0.2"
authors = ["Conor Forde"]
edition = '2021'

repository = "https://www.github.com/Snowda/LaughingMan"

description = "Laughing Man"
keywords = ["laughing", "gits", "recognition"]

[[bin]]
name = "test"
path = "src/laugh.rs"

[features]
default = ["std"]
std = [ "serde" ]

[dependencies]
futures = "0.3.19"

# HTTP Requests
reqwest = { version = "0.11.4", features = ["blocking"] }

# JSON parsing
serde = { version = "1.0.127", optional = true, features = ["derive"] }
serde_json = "1.0.66"

# Async communication
tokio = { version = "1.9.0", features = ["full"] }

# Time management
time = "0.3.1"
chrono = "0.4.19"